--- a/app/src/main/res/layout/recycler_list_item.xml
+++ b/app/src/main/res/layout/recycler_list_item.xml
@@ -2,37 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imageThumb"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"/>
+        android:layout_width="@dimen/image_size"
+        android:layout_height="@dimen/image_size"
+        android:layout_margin="@dimen/spacing_small_8"
+        tools:src="@color/black"/>
 
-     <LinearLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:orientation="vertical"
-         android:layout_margin="10dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="@dimen/spacing_small_8">
 
-         <TextView
-             android:id="@+id/tv_title"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:textStyle="bold"
-             android:textSize="18sp"
-             android:textColor="@color/black"/>
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="@dimen/fond_large_20"
+            android:textColor="@color/black"
+            tools:text="Title"/>
 
-         <TextView
-             android:id="@+id/tv_desc"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:textStyle="bold"
-             android:textSize="14sp"
-             android:maxLines="3"
-             android:textColor="@color/black"/>
-     </LinearLayout>
+        <TextView
+            android:id="@+id/tv_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="@dimen/font_normal_16"
+            android:maxLines="3"
+            android:textColor="@color/black"
+            tools:text="My name is ..."/>
+    </LinearLayout>
 
 </LinearLayout>
